Pop-up finished

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
         <h1>Discover the World of Rick and Morty</h1>
     </header>
 
+    <!-- Popup -->
+    <div class="popup" id="popup">
+        <span class="popup-close" id="popup-close">close</span>
+        <h2 id="popup-name"></h2>
+        <p id="popup-status"></p>
+        <p id="popup-species"></p>
+        <p id="popup-origin"></p>
+        <p id="popup-location"></p>
+        <h3>Episodes:</h3>
+        <ul id="popup-episodes"></ul>
+    </div>
+    <!-- Popup -->
+
     <main>
         <!-- Table of buttons to random characters -->
         <div class="randomZone">
