Patch responsive finished
Responsive phone size finished

--- a/index.html
+++ b/index.html
@@ -31,13 +31,17 @@
     <main>
         <!-- Table of buttons to random characters -->
         <div class="randomZone">
-            <h2>Instructions</h2>
-            <span class="choose">Choose a random</span>
-            <span class="choose">character type</span>
+            <div class="instruction-choose">
+                <h2>Instructions</h2>
+                <div class="choose-text">
+                    <span class="choose">Choose a random</span>
+                    <span class="choose">character type</span>
+                </div>
+            </div>
             <div class="buttons-container">
                 <button class="filter-button" data-filter="all">All</button>
                 <button class="filter-button" data-filter="alive">Alive</button>
-                <button class="filter-button" data-filter="dead">Dead</button>
+                <button class="filter-button dead" data-filter="dead">Dead</button>
                 <button class="filter-button" data-filter="unknown">Unknown</button>
             </div>
         </div>
@@ -53,7 +57,7 @@
                     </div>
                     <span class="word3">of</span>
                 </div>
-                <img src="images/Rick_and_Morty_logo.png" alt="Title Rick and Morty">
+                <div class="imgtitle"><img src="images/Rick_and_Morty_logo.png" alt="Title Rick and Morty"></div>
             </div>
             <!-- TITLE -->
 
