Patch popup update
Modif disposition stats

--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
     <div class="popup" id="popup">
         <span class="popup-close" id="popup-close">close</span>
         <h2 id="popup-name"></h2>
-        <p id="popup-status"></p>
-        <p id="popup-species"></p>
-        <p id="popup-origin"></p>
-        <p id="popup-location"></p>
+        <div class="center-popup">
+            <img id="popup-image" src="" alt="character image">
+            <div class="p-row">
+                <p id="popup-status"></p>
+                <p id="popup-species"></p>
+                <p id="popup-origin"></p>
+                <p id="popup-location"></p>
+            </div>
+        </div>
         <h3>Episodes:</h3>
         <ul id="popup-episodes"></ul>
     </div>
