--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h2>Instructions</h2>
                 <div class="choose-text">
                     <span class="choose">Choose a random</span>
-                    <span class="choose">character type</span>
+                    <span class="choose">character status</span>
                 </div>
             </div>
             <div class="buttons-container">
