Update btn go up

--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
         </div>
 
         <div class="imgchar"><img src="images/charbackg2.png" alt=""></div>
+
+        <div class="teleport">
+            <div class="warnarrow">
+                <div class="warning">
+                    <span class="push">Push Here</span>
+                    <span class="up">To Go Up</span>
+                </div>
+                <img src="images/white-arrow.png" alt="white arrow">
+            </div>
+            <a class="btn-teleport" href="#"></a>
+        </div>
     </main>
     
 </body>
