Patch btn go up

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="warnarrow">
                 <div class="warning">
                     <span class="push">Push Here</span>
-                    <span class="up">To Go Up</span>
+                    <span class="up"><span class="changecolor">-</span>To Go Up</span>
                 </div>
                 <img src="images/white-arrow.png" alt="white arrow">
             </div>
