Patch com and requests
Requests changed
Com changed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Discover the World of Rick and Morty</h1>
     </header>
 
-    <!-- Popup -->
+    <!----- Popup ----->
     <div class="popup" id="popup">
         <span class="popup-close" id="popup-close">close</span>
         <h2 id="popup-name"></h2>
@@ -31,10 +31,10 @@
         <h3>Episodes:</h3>
         <ul id="popup-episodes"></ul>
     </div>
-    <!-- Popup -->
+    <!----- Popup: END ----->
 
     <main>
-        <!-- Table of buttons to random characters -->
+        <!----- Table of buttons to random characters ----->
         <div class="randomZone">
             <div class="instruction-choose">
                 <h2>Instructions</h2>
@@ -50,10 +50,10 @@
                 <button class="filter-button" data-filter="unknown">Unknown</button>
             </div>
         </div>
-        <!-- Table of buttons to random characters -->
+        <!----- Table of buttons to random characters: END ----->
 
         <div class="tableHeader">
-            <!-- TITLE -->
+            <!---------- TITLE ---------->
             <div class="header">
                 <div class="discover">
                     <div class="allwords">
@@ -64,17 +64,18 @@
                 </div>
                 <div class="imgtitle"><img src="images/Rick_and_Morty_logo.png" alt="Title Rick and Morty"></div>
             </div>
-            <!-- TITLE -->
+            <!-------- TITLE: END -------->
 
-            <!-- Table of characters -->
-                <div class="characters-container" id="characters-container">
+            <!-------- Table of characters -------->
+            <div class="characters-container" id="characters-container">
 
-                </div>
-            <!-- Table of characters -->
+            </div>
+            <!----- Table of characters: END ----->
         </div>
 
         <div class="imgchar"><img src="images/charbackg2.png" alt=""></div>
 
+        <!------ TELEPORT BUTTON ------>
         <div class="teleport">
             <div class="warnarrow">
                 <div class="warning">
@@ -85,6 +86,7 @@
             </div>
             <a class="btn-teleport" href="#"></a>
         </div>
+        <!--- TELEPORT BUTTON: END --->
     </main>
     
 </body>
